@@ -721,7 +721,7 @@ default = 7;
 	class d_with_ai {
 		title = "$STR_DOM_MISSIONSTRING_1023";
 		values[] = {0,1,2};
-		default = 1;
+		default = 0;
 		texts[] = {"$STR_DOM_MISSIONSTRING_922","$STR_DOM_MISSIONSTRING_1007","$STR_DOM_MISSIONSTRING_2038"};
 	};
 
