@@ -25,3 +25,6 @@ STR_DOM_MISSIONSTRING_2048
 STR_DOM_MISSIONSTRING_2049
 STR_DOM_MISSIONSTRING_STATICWEAPONS
 STR_DOM_MISSIONSTRING_2051
+STR_DOM_MISSIONSTRING_2052
+STR_DOM_MISSIONSTRING_2053
+STR_DOM_MISSIONSTRING_2054
