@@ -350,3 +350,6 @@ STR_DOM_MISSIONSTRING_2049
 STR_DOM_MISSIONSTRING_2050
 STR_DOM_MISSIONSTRING_STATICWEAPONS
 STR_DOM_MISSIONSTRING_2051
+STR_DOM_MISSIONSTRING_2052
+STR_DOM_MISSIONSTRING_2053
+STR_DOM_MISSIONSTRING_2054
